App_Deploy_Using_Argocd_Online-Shop/online-shop-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
  namespace: online-shop
spec:
  type: ClusterIP

  selector:
    app: online-shop

  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
