App_Deploy_Using_Argocd_Online-Shop/online_shop_ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: online-shop
  namespace: online-shop

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`app.yogifoods.store`)
      kind: Rule

      services:
        - name: online-shop-service
          port: 3000

  tls:
    secretName: online-shop-tls
